remove javascript code and added link to js file

--- a/Safe.html
+++ b/Safe.html
@@ -224,58 +224,7 @@
     <div class="resetButton">                
     </div>
     <div><audio src="key-press.wav" id="keySound"></audio></div>
-<script>
-    let outputUpper = document.getElementById("upper");
-    let outputLower = document.getElementById("lower");
-    let open = document.getElementById("open");
-    var keySound = document.getElementById("keySound");
-
-function playAudio() {
-  keySound.play();
-}
-
-    function press(e) {
-        if (display.innerHTML === '0') {
-            display.innerHTML = e.innerHTML;
-        }
-        else {
-            display.innerHTML += e.innerHTML;
-            console.log(parseInt(display.innerHTML));
-            playAudio();            
-        }
-        
-    }
-    function pressClear() {
-        display.innerHTML = display.innerHTML.slice(0, -1);
-        playAudio(); 
-}
-function checkRandom() {
-    let numb = parseInt(display.innerHTML);
-    if (parseInt(display.innerHTML) == 1234){
-        playAudio(); 
-                openSafe();
-
-            } else if(parseInt(display.innerHTML) != 2){
-                console.log('tryagain');
-            }
-}
-var looper;
-var degrees = 0;
-var speed = 1;
-function turnDial() {
-    var dial = document.getElementById("dial");
-    dial.style.transform = "rotate("+degrees+"deg)";
-    looper = setTimeout("turnDial(\''+dial+'\','+speed+')",speed);
-    degrees++;
-    if(degrees>359){
-        degrees = 1;
-    }
-}
-function openSafe() {
-    open.style.transform = "perspective(1000px) rotateY(-90deg) scale(0.7)"
-}
-
-</script>
+<script src="script.js"></script>
 </body>
 
 </html>
