--- a/Safe.html
+++ b/Safe.html
@@ -80,6 +80,8 @@
 <p> Message is: <span id = "display_message"></span> </p>
     </div>
 </div>
+    
+<!--modal that pops up when game is over-->
 <div id="gameover">
     <div class="gameoverModal">
         <h1>GAME OVER!!</h1>
