--- a/Safe.html
+++ b/Safe.html
@@ -19,21 +19,23 @@
     <div class="wall">
         <div class="safe">
 
+            <!inside view of safe-->
             <div class="inside" id="inside">
                 <h1>treasure</h1>
             </div>
 
+            <!--front view of safe-->
             <div class="front" id="open">
                 <div class="handle">
                     <img src="images/dial.png" alt="" width="100px" id="dial" onclick="turnDial()">
                 </div>
                 <div class="container">
+                    <!-- lights that change depending on guess-->
                     <div class="indicators">
                         <div id="red"></div>
                         <div id="green"></div>
                     </div>
                     <div class="output">
-                        <!--<p id="display"></p>-->
                         <input type="text" id="input1" maxlength="1">
   <input type="text" id="input2" maxlength="1">
   <input type="text" id="input3" maxlength="1">
