image commented out

--- a/Safe.html
+++ b/Safe.html
@@ -27,8 +27,8 @@
             <!--front view of safe-->
             <div class="front" id="open">
                 <div class="handle">
-                    <img src="images/dial.png" alt="" width="100px" id="dial" onclick="turnDial()">
-                </div>
+                    <!--<img src="images/dial.png" alt="" width="100px" id="dial" onclick="turnDial()">
+                </div>-->
                 <div class="container">
                     <!-- lights that change depending on guess-->
                     <div class="indicators">
